<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fragments"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_logo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/ic_logo"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_sign_up"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@+id/et_input_name"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintStart_toStartOf="@id/iv_logo"
        app:layout_constraintEnd_toEndOf="@id/iv_logo"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:background="@drawable/bg_edittext"
        android:drawableStart="@drawable/ic_account"
        android:padding="13dp"
        android:inputType="text"
        android:layout_marginTop="25dp"
        android:textColor="@color/black"
        android:hint="@string/enter_your_name"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="16sp"
        android:drawablePadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_up" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_input_phoneNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_edittext"
        android:drawableStart="@drawable/ic_call"
        android:drawablePadding="10dp"
        android:textColor="@color/black"
        android:hint="@string/text_numbers_phone"
        android:inputType="phone"
        android:digits="0123456789+"
        android:lines="1"
        android:maxEms="13"
        android:maxLines="1"
        android:maxLength="13"
        android:padding="13dp"
        android:singleLine="true"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_input_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signUp_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@drawable/bg_buttons"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintTop_toBottomOf="@id/et_input_phoneNum"
        app:layout_constraintStart_toStartOf="@id/et_input_phoneNum"
        app:layout_constraintEnd_toEndOf="@id/et_input_phoneNum"/>

</androidx.constraintlayout.widget.ConstraintLayout>